--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ book:
       chapters:
       - html-example.qmd
       - word-example.qmd
+      - slide-example.qmd
 
 bibliography: references.bib
 
@@ -25,5 +26,4 @@ format:
     documentclass: scrreprt
 mainfont: 'Georgia'
 
-editor: visual
 
